[Development] - refactor: add icon in password input, add storybook docs and config storybook

--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -3,6 +3,7 @@ import {{pascalCase name}} from '.'
 
 const meta: Meta<typeof {{pascalCase name}}> = {
   component: {{pascalCase name}},
+  tags: ['autodocs'],
 }
 
 export default meta
